style: [frontend] Estilização do Header

--- a/app/frontend/src/components/Header.css
+++ b/app/frontend/src/components/Header.css
@@ -1,17 +1,38 @@
-.header-container {
+main.header-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 21vh;
 }
 
-.logo-img {
+img.logo-img.logo-img-standard {
   align-content: center;
+  padding: 12px;
 }
 
 .links-container {
   align-items: center;
   align-content: center;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-flow: row;
+  justify-content: center;
+  width: 100vh;
+}
+
+.header-pages-btn {
+  width: 80px;
+  height: 30px;
+  background-color: #18A2A1;
+  border: 1px solid #18A2A1;
+  border-radius: 6px;
+  color: #FFFFFF;
+}
+
+.logout-btn {
+  width: 90px;
+  background-color: rgb(148, 148, 148);
+  border: 2px solid #D6DF28;
+  border-radius: 8px;
+  color: #D6DF28;
+  margin: 10px;
 }
