--- a/app/frontend/src/pages/RandomUsers.css
+++ b/app/frontend/src/pages/RandomUsers.css
@@ -1,17 +1,27 @@
 .main-random-users {
   align-items: center;
-  background-color: #00000026;
   text-align: center;
 }
 
 .users-container {
   align-items: center;
-  background-color: #00000026;
   text-align: center;
 }
 
 .search-container {
-  background-color: #00000026;
+  align-items: center;
+  align-content: center;
+  background-color: #71717126;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  width: 50vh;
+}
+
+.search-container > input {
+  border-radius: 5px;
+  height: 20px;
+  width: 38vh;
 }
 
 .user-card {
