--- a/app/frontend/src/pages/HttpCats.css
+++ b/app/frontend/src/pages/HttpCats.css
@@ -1,5 +1,17 @@
+.main-container-cats {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.http-status-input {
+  margin: 20px;
+  width: 150px;
+}
+
 .cat-img {
-  max-width: 100%;
-  max-height: 80vh;
-  box-shadow: 1px 1px 0 0 #ffffff inset, 0 2px 3px 0 #b3b3b3;
+  border-radius: 8px;
+  box-shadow: 5px 4px #cdcccc;
+  width: 98%;
+  max-width: 80vh;
 }
