--- a/app/frontend/src/pages/RandomDog.css
+++ b/app/frontend/src/pages/RandomDog.css
@@ -1,5 +1,20 @@
 .dog-img {
+  border-radius: 8px;
+  box-shadow: 1px 1px 0 0 #ffffff inset, 0 2px 3px 0 #b3b3b3;
   max-width: 100%;
   max-height: 80vh;
-  box-shadow: 1px 1px 0 0 #ffffff inset, 0 2px 3px 0 #b3b3b3;
+}
+
+.main-container-dogs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.refresh-btn {
+  background-color: #D6DF28;
+  border: 1px solid  rgb(148, 148, 148);
+  border-radius: 8px;
+  color:  rgb(148, 148, 148);
+  margin: 30px;
 }
