style: [frontend] Estilização da página de clientes

--- a/app/frontend/src/components/ClientForm.css
+++ b/app/frontend/src/components/ClientForm.css
@@ -1,8 +1,5 @@
 .form-client {
-  align-content: center;
-  align-items: center;
-  text-align: center;
   display: flex;
   flex-flow: row wrap;
-  text-align: center;
+  justify-content: center;
 }
