--- a/app/frontend/src/components/ClientCard.css
+++ b/app/frontend/src/components/ClientCard.css
@@ -5,3 +5,13 @@
   padding: 2px;
   margin: 20px 40px;
 }
+
+.client-card > p {
+  margin: 15px 20px;
+}
+
+#delete-btn {
+  background-color: rgba(255, 0, 0, 0.66);
+}
+
+/* #update-btn { } */
