--- a/app/frontend/src/pages/Clients.css
+++ b/app/frontend/src/pages/Clients.css
@@ -4,5 +4,11 @@
 }
 
 .clients-search {
-
+  align-items: center;
+  align-content: center;
+  background-color: #71717126;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  width: 50vh;
 }
