--- a/app/frontend/src/components/HeaderLogin.css
+++ b/app/frontend/src/components/HeaderLogin.css
@@ -8,4 +8,13 @@
 .logo-img {
   align-content: center;
   padding: 10vh;
+  width: 300px;
+}
+
+@media (min-width: 1080px) {
+  .logo-img {
+    align-content: center;
+    padding: 10vh;
+    width: 350px;
+  }
 }
