--- a/app/frontend/src/pages/Login.css
+++ b/app/frontend/src/pages/Login.css
@@ -21,6 +21,13 @@
   text-align: center;
 }
 
+#username, #password {
+  border: 2px solid #D6DF28;
+  border-radius: 8px;
+  padding: 8px;
+  margin: 15px;
+}
+
 .remember-container {
   font-size: 16px;
   padding: 8px;
@@ -36,3 +43,20 @@ input, button {
   color: red;
 }
 
+@media (min-width: 1080px) {
+  .login-form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin: 5% 25%;
+    width: 50%;
+  }
+
+  #username, #password {
+    border: 2px solid #D6DF28;
+    border-radius: 8px;
+    padding: 8px;
+    margin: 15px;
+    width: 250px;
+  }
+}
